<?xml version="1.0"?>
<package format="3">
  <name>map_exporter</name>
  <version>1.0.0</version>
  <description>The exporter for map.</description>

  <maintainer email="kinetis@gmail.com">Kinetis</maintainer>

  <license>TODO</license>

  <author>Kinetis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>